--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -5,10 +5,42 @@
     <meta charset="utf-8">
 </head>
 <body>
-<h1>Tai yra antraštė</h1>
-<h2>Poraste</h2>
 
-<p>Tai yra paragrafas.</p>
-<div>O čia yra turinio skyrius.</div>
+<header>
+    <h1>Puslapio pavadinimas</h1>
+    <nav>
+        <a href="index.html">Pagrindinis</a>
+        <a href="about.html">Apie</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contacts.html">Kontaktai</a>
+    </nav>
+</header>
+<main>
+    <asside>
+        <img src="img/portfolio1.jpg" alt="1">
+        <img src="img/portfolio2.jpg" alt="2">
+
+        <a href="adresasa iki kazzko">
+            <img src="img/portfolio3.jpg" alt="3">
+        </a>
+
+    </asside>
+    <p>
+        <img src="img/profile.jpg" alt="mano profilis">
+        Lorem ipsum dolor sit amet, <span title="This is Explonation">consectetur</span> adipisicing elit. Aliquam
+        aliquid dolore ipsam iusto porro quis repellat
+        sequi. Accusantium adipisci aliquid asperiores at blanditiis consequatur ea enim esse illum in incidunt
+        laboriosam
+        laborum maiores nemo nihil obcaecati officia praesentium repellendus sequi temporibus, vel veniam voluptatum.
+        Alias,
+        aliquid architecto corporis doloribus, eligendi enim eum fugit labore libero non praesentium quia quos ratione
+        reiciendis similique sit veritatis? Accusantium aliquid culpa distinctio dolore doloribus eius ex incidunt
+        minus,
+    </p>
+</main>
+<footer>
+    <span>2023&copy; Visos teisės saugomos</span>
+</footer>
+
 </body>
 </html>
