First CSS lesson

--- a/mano_failai/about.html
+++ b/mano_failai/about.html
@@ -3,6 +3,8 @@
 <head>
     <title>Puslapio pavadinimas</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/manodizainas.css">
+
 </head>
 <body>
 
