--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Puslapio pavadinimas</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/manodizainas.css">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
     </nav>
 </header>
 <main>
-    <asside>
+    <aside>
         <a href="adresasa iki item 1">
             <img src="https://picsum.photos/200/200?random=1" alt="1 item">
         </a>
@@ -27,7 +28,7 @@
             <img src="https://picsum.photos/200/200?random=3" alt="3 item">
         </a>
 
-    </asside>
+    </aside>
     <p>
         <img src="img/profile.webp" alt="mano profilis" width="300px">
         Lorem ipsum dolor sit amet, <span title="This is Explonation">consectetur</span> adipisicing elit. Aliquam
