--- a/mano_failai/payment_form.html
+++ b/mano_failai/payment_form.html
@@ -1,4 +1,8 @@
 <html lang="lt">
+<head>
+    <title>Paymentu puslapis</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/manodizainas.css">
 <body>
 <h1>Payment form</h1>
 ....
