--- a/mano_failai/about.html
+++ b/mano_failai/about.html
@@ -4,7 +4,7 @@
     <title>Puslapio pavadinimas</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/manodizainas.css">
-
+    <link rel="stylesheet" href="css/manodizainas2.css">
 </head>
 <body>
 
