--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -4,6 +4,7 @@
     <title>Puslapio pavadinimas</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/manodizainas.css">
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
 
@@ -29,21 +30,24 @@
         </a>
 
     </aside>
-    <p>
-        <img src="img/profile.webp" alt="mano profilis" width="300px">
-        Lorem ipsum dolor sit amet, <span title="This is Explonation">consectetur</span> adipisicing elit. Aliquam
-        aliquid dolore ipsam iusto porro quis repellat
-        sequi. Accusantium adipisci aliquid asperiores at blanditiis consequatur ea enim esse illum in incidunt
-        laboriosam
-        laborum maiores nemo nihil obcaecati officia praesentium repellendus sequi temporibus, vel veniam voluptatum.
-        Alias,
-        aliquid architecto corporis doloribus, eligendi enim eum fugit labore libero non praesentium quia quos ratione
-        reiciendis similique sit veritatis? Accusantium aliquid culpa distinctio dolore doloribus eius ex incidunt
-        minus,
-    </p>
+    <section>
+        <p>
+            <img src="img/profile.webp" alt="mano profilis" width="300px">
+            Lorem ipsum dolor sit amet, <span title="This is Explonation">consectetur</span> adipisicing elit. Aliquam
+            aliquid dolore ipsam iusto porro quis repellat
+            sequi. Accusantium adipisci aliquid asperiores at blanditiis consequatur ea enim esse illum in incidunt
+            laboriosam
+            laborum maiores nemo nihil obcaecati officia praesentium repellendus sequi temporibus, vel veniam voluptatum.
+            Alias,
+            aliquid architecto corporis doloribus, eligendi enim eum fugit labore libero non praesentium quia quos ratione
+            reiciendis similique sit veritatis? Accusantium aliquid culpa distinctio dolore doloribus eius ex incidunt
+            minus,
+        </p>
+    </section>
 </main>
 <footer>
     <span>2023&copy; Visos teisės saugomos</span>
+    <section>Kazkas</section>
 </footer>
 
 </body>
