--- a/mano_failai/portfolio.html
+++ b/mano_failai/portfolio.html
@@ -4,6 +4,7 @@
     <title>Puslapio pavadinimas</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/manodizainas.css">
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
 
