CSS Layouts, paddings, margins

--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -19,16 +19,19 @@
 </header>
 <main>
     <aside>
-        <a href="adresasa iki item 1">
-            <img src="https://picsum.photos/200/200?random=1" alt="1 item">
-        </a>
-        <a href="adresasa iki item 2">
-            <img src="https://picsum.photos/200/200?random=2" alt="2 item">
-        </a>
-        <a href="adresasa iki item 3">
-            <img src="https://picsum.photos/200/200?random=3" alt="3 item">
-        </a>
-
+        <header>Mano 3 darbai</header>
+        <main>
+            <a href="adresasa iki item 1">
+                <img src="https://picsum.photos/200/200?random=1" alt="1 item">
+            </a>
+            <a href="adresasa iki item 2">
+                <img src="https://picsum.photos/200/200?random=2" alt="2 item">
+            </a>
+            <a href="adresasa iki item 3">
+                <img src="https://picsum.photos/200/200?random=3" alt="3 item">
+            </a>
+        </main>
+        <footer class="more_footer">Daugiau mano darbu</footer>
     </aside>
     <section>
         <p>
