--- a/mano_failai/portfolio.html
+++ b/mano_failai/portfolio.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/manodizainas.css">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/portfolio.css">
 </head>
 <body>
 
