--- a/mano_failai/payment_form.html
+++ b/mano_failai/payment_form.html
@@ -4,7 +4,74 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/manodizainas.css">
 <body>
-<h1>Payment form</h1>
-....
+<form action="">
+    <h1>Payment form</h1>
+    <p>All fields are required</p>
+    <fieldset id="personal_info">
+        <legend>Personal information</legend>
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" required>
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="pass">Password:</label>
+        <input type="password" name="pass" id="pass" required>
+    </fieldset>
+
+    <fieldset id="address">
+        <legend>Address</legend>
+        <label for="street">Street:</label>
+        <input type="text" name="street" id="street" required>
+        <label for="city">City:</label>
+        <input type="text" name="city" id="city" required>
+        <label for="state">State/Province:</label>
+        <input type="text" name="state" id="state" required>
+        <label for="zip">Zip Code:</label>
+        <input type="text" name="zip" id="zip" required>
+        <label for="country">Country:</label>
+        <select id="country" name="country" required>
+            <option value="lt">Lithuania</option>
+            <option value="lv">Latvia</option>
+            <option value="ee">Estonia</option>
+        </select>
+    </fieldset>
+
+    <fieldset id="shipping_address">
+        <legend>Address</legend>
+        <label for="shipping_street">Street:</label>
+        <input type="text" name="street" id="shipping_street" required>
+        <label for="shipping_city">City:</label>
+        <input type="text" name="city" id="shipping_city" required>
+        <label for="shipping_state">State/Province:</label>
+        <input type="text" name="state" id="shipping_state" required>
+        <label for="shipping_zip">Zip Code:</label>
+        <input type="text" name="zip" id="shipping_zip" required>
+        <label for="shipping_country">Country:</label>
+        <select id="shipping_country" name="country" required>
+            <option value="lt">Lithuania</option>
+            <option value="lv">Latvia</option>
+            <option value="ee">Estonia</option>
+        </select>
+    </fieldset>
+    
+    <fieldset>
+        <legend>Payment Information</legend>
+        <label for="card">Card type:</label>
+        <select id="card">
+            <option value="visa">visa</option>
+            <option value="mastercard">mastercard</option>
+            <option value="Debit">Debit</option>
+        </select>
+        <label for="card_number">Card number:</label>
+        <input type="text" name="card_number" id="card_number" required>
+        <label for="card_cvv">CVV:</label>
+        <input type="text" name="card_cvv" id="card_cvv" required>
+        <label for="date">Expiration date:</label>
+        <input type="date" name="date" id="date" required>
+    </fieldset>
+
+    <label for="agree">Agree with terms and conditions</label>
+    <input type="checkbox" name="agree" id="agree"> 
+    <input type="submit" value="Validate the payment">
+</form>
 </body>
 </html>
