--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -11,10 +11,12 @@
 <header>
     <h1>Puslapio pavadinimas</h1>
     <nav>
-        <a href="index.html">Pagrindinis</a>
-        <a href="about.html">Apie</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contacts.html">Kontaktai</a>
+        <div class="meniu">
+            <a class="meniu_item" href="index.html">Pagrindinis</a>
+            <a class="meniu_item" href="about.html">Apie</a>
+            <a class="meniu_item" href="portfolio.html">Portfolio</a>
+            <a class="meniu_item" href="contacts.html">Kontaktai</a>
+        </div>
     </nav>
 </header>
 <aside>
