CSS Media queries

--- a/mano_failai/about.html
+++ b/mano_failai/about.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/manodizainas.css">
     <link rel="stylesheet" href="css/manodizainas2.css">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/mediaQueries.css">
+
 </head>
 <body>
 
