--- a/mano_failai/payment_form.html
+++ b/mano_failai/payment_form.html
@@ -3,6 +3,8 @@
     <title>Paymentu puslapis</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/manodizainas.css">
+    <link rel="stylesheet" href="css/mediaQueries.css">
+
 <body>
 <form action="">
     <h1>Payment form</h1>
