--- a/mano_failai/portfolio.html
+++ b/mano_failai/portfolio.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/manodizainas.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="css/mediaQueries.css">
 </head>
 <body>
 
