--- a/mano_failai/contacts.html
+++ b/mano_failai/contacts.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/manodizainas.css">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/mediaQueries.css">
+
 </head>
 <body>
 
