--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -2,20 +2,34 @@
 <html lang="lt">
 <head>
     <title>Puslapio pavadinimas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/manodizainas.css">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/mediaQueries.css">
 </head>
 <body>
 
 <header>
     <h1>Puslapio pavadinimas</h1>
-    <nav>
+    <nav class="desktop">
         <div class="meniu">
             <a class="meniu_item" href="index.html">Pagrindinis</a>
             <a class="meniu_item" href="about.html">Apie</a>
             <a class="meniu_item" href="portfolio.html">Portfolio</a>
             <a class="meniu_item" href="contacts.html">Kontaktai</a>
+        </div>
+    </nav>
+    <nav class="mobile">
+        <div class="burger">
+            [=]
+            <div class="meniu">
+                <a class="meniu_item" href="index.html">Pagrindinis</a>
+                <a class="meniu_item" href="about.html">Apie</a>
+                <a class="meniu_item" href="portfolio.html">Portfolio</a>
+                <a class="meniu_item" href="contacts.html">Kontaktai</a>
+            </div>
         </div>
     </nav>
 </header>
