CSS Media queries + Comments

--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -13,6 +13,7 @@
 
 <header>
     <h1>Puslapio pavadinimas</h1>
+<!--    Meniu juosta pritaikyta Desktop tipo irenginiams-->
     <nav class="desktop">
         <div class="meniu">
             <a class="meniu_item" href="index.html">Pagrindinis</a>
@@ -21,6 +22,7 @@
             <a class="meniu_item" href="contacts.html">Kontaktai</a>
         </div>
     </nav>
+    <!--    Meniu juosta pritaikyta Mobile tipo irenginiams-->
     <nav class="mobile">
         <div class="burger">
             [=]
