--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="lt">
 <head>
+    <link rel="icon" href="favicon.png">
     <title>Puslapio pavadinimas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -8,6 +9,8 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/mediaQueries.css">
+    <script src="js/kodas.js" defer></script>
+    <script src="js/gmmd.js"></script>
 </head>
 <body>
 
