JS Arrow functions

--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -39,7 +39,7 @@
     </nav>
 </header>
 <aside>
-    <header>Mano 3 darbai</header>
+    <header onclick="kaDaryti()">Mano 3 darbai</header>
     <main>
         <a href="adresasa iki item 1">
             <img src="https://picsum.photos/200/200?random=1" alt="1 item">
@@ -65,6 +65,7 @@
         aliquid architecto corporis doloribus, eligendi enim eum fugit labore libero non praesentium quia quos ratione
         reiciendis similique sit veritatis? Accusantium aliquid culpa distinctio dolore doloribus eius ex incidunt
         minus,
+        <div id="elementas">Tekstas</div>
     </p>
 </main>
 <footer>
