--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/mediaQueries.css">
     <script src="js/kodas.js" defer></script>
     <script src="js/gmmd.js"></script>
+    <script src="js/DOM_Manipuliacijos.js" defer></script>
 </head>
 <body>
 
@@ -55,6 +56,7 @@
 </aside>
 <main>
     <p>
+        <div id="manoVardas">Vardas Pavarde</div>
         <img src="img/profile.webp" alt="mano profilis" width="300px">
         Lorem ipsum dolor sit amet, <span title="This is Explonation">consectetur</span> adipisicing elit. Aliquam
         aliquid dolore ipsam iusto porro quis repellat
