JS DOM manipuliacijos

--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -55,7 +55,7 @@
     <footer class="more_footer">Daugiau mano darbu</footer>
 </aside>
 <main>
-    <p>
+    <p id="testas">
         <div id="manoVardas">Vardas Pavarde</div>
         <img src="img/profile.webp" alt="mano profilis" width="300px">
         Lorem ipsum dolor sit amet, <span title="This is Explonation">consectetur</span> adipisicing elit. Aliquam
@@ -67,7 +67,15 @@
         aliquid architecto corporis doloribus, eligendi enim eum fugit labore libero non praesentium quia quos ratione
         reiciendis similique sit veritatis? Accusantium aliquid culpa distinctio dolore doloribus eius ex incidunt
         minus,
-        <div id="elementas">Tekstas</div>
+        <div id="elementas">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </p>
 </main>
 <footer>
