--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -12,6 +12,7 @@
     <script src="js/kodas.js" defer></script>
     <script src="js/gmmd.js"></script>
     <script src="js/DOM_Manipuliacijos.js" defer></script>
+    <script src="js/meniu.js" defer></script>
 </head>
 <body>
 
@@ -19,23 +20,13 @@
     <h1>Puslapio pavadinimas</h1>
 <!--    Meniu juosta pritaikyta Desktop tipo irenginiams-->
     <nav class="desktop">
-        <div class="meniu">
-            <a class="meniu_item" href="index.html">Pagrindinis</a>
-            <a class="meniu_item" href="about.html">Apie</a>
-            <a class="meniu_item" href="portfolio.html">Portfolio</a>
-            <a class="meniu_item" href="contacts.html">Kontaktai</a>
-        </div>
+        <div class="meniu"></div>
     </nav>
     <!--    Meniu juosta pritaikyta Mobile tipo irenginiams-->
     <nav class="mobile">
         <div class="burger">
             [=]
-            <div class="meniu">
-                <a class="meniu_item" href="index.html">Pagrindinis</a>
-                <a class="meniu_item" href="about.html">Apie</a>
-                <a class="meniu_item" href="portfolio.html">Portfolio</a>
-                <a class="meniu_item" href="contacts.html">Kontaktai</a>
-            </div>
+            <div class="meniu"></div>
         </div>
     </nav>
 </header>
