Adapting contacts.html to use Meniu

--- a/mano_failai/contacts.html
+++ b/mano_failai/contacts.html
@@ -6,17 +6,24 @@
     <link rel="stylesheet" href="css/manodizainas.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/mediaQueries.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <script src="js/meniu.js"></script>
 
 </head>
 <body>
 
 <header>
     <h1>Kontaktai</h1>
-    <nav>
-        <a href="index.html">Pagrindinis</a>
-        <a href="about.html">Apie</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contacts.html">Kontaktai</a>
+    <!--    Meniu juosta pritaikyta Desktop tipo irenginiams-->
+    <nav class="desktop">
+        <div class="meniu"></div>
+    </nav>
+    <!--    Meniu juosta pritaikyta Mobile tipo irenginiams-->
+    <nav class="mobile">
+        <div class="burger">
+            [=]
+            <div class="meniu"></div>
+        </div>
     </nav>
 </header>
 <main>
