--- a/mano_failai/contacts.html
+++ b/mano_failai/contacts.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/mediaQueries.css">
     <link rel="stylesheet" href="css/menu.css">
-    <script src="js/meniu.js"></script>
 
 </head>
 <body>
@@ -48,10 +47,13 @@
         <button type="submit" formaction="http://localhost/kazur">Kitur</button>
         <button type="submit" formmethod="get">Siųsti[get]</button>
     </form>
+    <div id="rezultatas"></div>
 </main>
 <footer>
     <span>2023&copy; Visos teisės saugomos</span>
 </footer>
 
+<script src="js/meniu.js"></script>
+<script src="js/contacts.js"></script>
 </body>
 </html>
