Adapting Gallery generation by JSON data

--- a/mano_failai/portfolio.html
+++ b/mano_failai/portfolio.html
@@ -20,40 +20,13 @@
     </nav>
 </header>
 <main>
-    <div class="gallery">
-        <div><img src="https://picsum.photos/200/300?random=1" alt="1 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=2" alt="2 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=3" alt="3 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=4" alt="4 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=5" alt="5 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=6" alt="6 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=7" alt="7 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=8" alt="8 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=9" alt="9 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=10" alt="10 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=11" alt="11 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=12" alt="12 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=13" alt="13 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=14" alt="14 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=15" alt="15 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=16" alt="16 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=17" alt="17 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=18" alt="18 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=19" alt="19 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=20" alt="20 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=21" alt="21 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=22" alt="22 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=23" alt="23 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=24" alt="24 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=25" alt="25 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=26" alt="26 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=27" alt="27 item"></div>
-        <div><img src="https://picsum.photos/200/300?random=28" alt="28 item"></div>
+    <div class="gallery" id="work_gallery">
+
     </div>
 </main>
 <footer>
     <span>2023&copy; Visos teisės saugomos</span>
 </footer>
-
+<script src="js/gallery.js" defer></script>
 </body>
 </html>
