--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -46,6 +46,7 @@
     <footer class="more_footer">Daugiau mano darbu</footer>
 </aside>
 <main>
+    <button class="continue">Continue ?</button>
     <p id="testas">
         <div id="manoVardas">Vardas Pavarde</div>
         <img src="img/profile.webp" alt="mano profilis" width="300px">
@@ -73,6 +74,10 @@
     <span>2023&copy; Visos teisės saugomos</span>
     <section>Kazkas</section>
 </footer>
+
+<script src="js/code.jquery.com_jquery-3.7.0.min.js" defer></script>
+<script src="js/jqueryKodas.js"defer></script>
+
 
 </body>
 </html>
