jQuery intro Fixes

--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -48,7 +48,7 @@
 <main>
     <button class="continue">Continue ?</button>
     <p id="testas">
-        <div id="manoVardas">Vardas Pavarde</div>
+        <span id="manoVardas">Vardas Pavarde</span>
         <img src="img/profile.webp" alt="mano profilis" width="300px">
         Lorem ipsum dolor sit amet, <span title="This is Explonation">consectetur</span> adipisicing elit. Aliquam
         aliquid dolore ipsam iusto porro quis repellat
@@ -59,16 +59,17 @@
         aliquid architecto corporis doloribus, eligendi enim eum fugit labore libero non praesentium quia quos ratione
         reiciendis similique sit veritatis? Accusantium aliquid culpa distinctio dolore doloribus eius ex incidunt
         minus,
-        <div id="elementas">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
+
     </p>
+    <div id="elementas">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 </main>
 <footer>
     <span>2023&copy; Visos teisės saugomos</span>
