jQuery Create new Element

--- a/mano_failai/index.html
+++ b/mano_failai/index.html
@@ -47,6 +47,8 @@
 </aside>
 <main>
     <button class="continue">Continue ?</button>
+    <button class="add">Add input element</button>
+    <div class="elements"></div>
     <p id="testas">
         <span id="manoVardas">Vardas Pavarde</span>
         <img src="img/profile.webp" alt="mano profilis" width="300px">
@@ -78,7 +80,6 @@
 
 <script src="js/code.jquery.com_jquery-3.7.0.min.js" defer></script>
 <script src="js/jqueryKodas.js"defer></script>
-
 
 </body>
 </html>
